@@ -1,5 +1,9 @@
 2021-01-26  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
+	* graph/grblit.c (blit_mono_to_*): Slightly faster variants.
+
+2021-01-26  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
 	[graph] Decouple the legacy and alpha blenders.
 
 	* graph/grblit.c (grBlitGlyphToBitmap): Do not call
